// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-placeholder> Component Placeholder size: large 1`] = `
<bolt-placeholder size="large">
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper ">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--large">
        large Bolt Placeholder
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: medium 1`] = `
<bolt-placeholder size="medium">
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper ">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--medium">
        medium Bolt Placeholder
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: small 1`] = `
<bolt-placeholder size="small">
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper ">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--small">
        small Bolt Placeholder
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: xlarge 1`] = `
<bolt-placeholder size="xlarge">
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper ">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--xlarge">
        xlarge Bolt Placeholder
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: xsmall 1`] = `
<bolt-placeholder size="xsmall">
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper ">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--xsmall">
        xsmall Bolt Placeholder
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component placeholder component 1`] = `
<bolt-placeholder size="large">
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper ">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--large">
        Bolt Placeholder Example
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component placeholder component animated 1`] = `
<bolt-placeholder size="large"
                  animated
>
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper c-bolt-placeholder__wrapper--animated">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--large">
        Bolt Placeholder Example
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component stacked <bolt-placeholder> 1`] = `
<bolt-placeholder size="large"
                  animated
>
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper c-bolt-placeholder__wrapper--animated">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--large">
        Bolt Placeholder Example
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
<bolt-placeholder size="large"
                  animated
>
  <replace-with-children class="c-bolt-placeholder">
    <replace-with-children class="c-bolt-placeholder__wrapper c-bolt-placeholder__wrapper--animated">
      <replace-with-children class="c-bolt-placeholder__wrapper-y">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__wrapper-x">
      </replace-with-children>
      <replace-with-children class="c-bolt-placeholder__content c-bolt-placeholder__content--large">
        Bolt Placeholder Example
      </replace-with-children>
    </replace-with-children>
  </replace-with-children>
</bolt-placeholder>
`;
